discuss delay in nef dynamics

--- a/theory/NEF_dynamics.ipynb
+++ b/theory/NEF_dynamics.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:a9ea8159ada5cae6100e91751bca8d8ecde8ef9da8b8e1476f0c1dce55cd6d53"
+  "signature": "sha256:4b5eb4d84455f9d0ab679f0017b197cbcedf8c2020d7e75d2dfbd3176c68c80b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -124,6 +124,55 @@
      "metadata": {},
      "source": [
       "TODO"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": [
+      "Feedback delays cannot be compensated causally"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Introducing a delay in the feedback loop breaks the mapping between the neurally plausible system and the standard linear dynamical system.\n",
+      "\n",
+      "![neural system with delay](figures/neural_system_delayed.png \"neural system with delay\")\n",
+      "\n",
+      "In this system,\n",
+      "\n",
+      "\\begin{align}\n",
+      "x(t) &= h(t)*[A'x(t)*\\delta(t-d) + B'u(t)] \\\\\n",
+      "X(s) &= H(s)[A'X(s)e^{-ds} + B'U(s)] \\\\\n",
+      " &= \\frac{1}{\\tau s+1}[A'X(s)e^{-ds} + B'U(s)] \\\\\n",
+      " &= \\frac{\\tau^{-1}}{s+\\tau^{-1}}[A'X(s)e^{-ds} + B'U(s)] \\\\\n",
+      "(s+\\tau^{-1})X(s) &= \\tau^{-1}[A'X(s)e^{-ds} + B'U(s)] \\\\\n",
+      "sX(s) &= \\tau^{-1}(A'e^{-ds}-I)X(s) + \\tau^{-1}B'U(s) \\\\\n",
+      "\\end{align}"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Comparing this with the standard dynamical system formulation,\n",
+      "\n",
+      "\\begin{align}\n",
+      "sX(s) &= AX(s) + BU(s) \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "we cannot equate $A$ to $\\tau^{-1}(A'e^{-ds}-I)$ because $A$ is a constant. Even doing so,\n",
+      "\n",
+      "\\begin{align}\n",
+      "A &= \\tau^{-1}(A'e^{-ds}-I) \\\\\n",
+      "\\tau A + I &= A'e^{-ds} \\\\\n",
+      "A' &= e^{ds}(\\tau A + I) \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "we see that mapping the neurally-plausible dynamical system onto a standard dynamical system requires an acausal transformation in $A'$ because $e^{ds}$ implies a a forward shift in time."
      ]
     }
    ],
