refactor superfast_network into utils

--- a/synapse/synapse_SNR_uniform.ipynb
+++ b/synapse/synapse_SNR_uniform.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:41d181a1ab058fcca54020640b3313fd33ad12d2ab6eb94e19e8fd8775ab084e"
+  "signature": "sha256:600b96c48e241b3991f131c6d8046a8a97f8d856ff1551986187ff04c03347a9"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -144,7 +144,7 @@
       "Taking the limit (with Mathematica), \n",
       "\n",
       "$$\n",
-      "\\lim_{\\lambda\\rightarrow\\infty}\\operatorname{Var}(X) = \\frac{1}{12\\tau^2}.\n",
+      "\\lim_{\\lambda\\rightarrow\\infty}\\operatorname{Var}(x) = \\frac{1}{12\\tau^2}.\n",
       "$$\n",
       "\n",
       "The $SNR$ is\n",
