--- a/theory/NEF_dynamics.ipynb
+++ b/theory/NEF_dynamics.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:4b5eb4d84455f9d0ab679f0017b197cbcedf8c2020d7e75d2dfbd3176c68c80b"
+  "signature": "sha256:37fc26f862dd4ed5a499f295e6f7434feaf4970e1636d6e7e316eb4605445106"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -108,7 +108,8 @@
      "source": [
       "Is this true always? When can we assume that the soma dynamics have no effect on the system dynamics?\n",
       "\n",
-      "TODO"
+      "TODO\n",
+      " - What if the firing rates are really slow? Membrane time constants are long?"
      ]
     },
     {
