attempt to use slotine contraction of ralif

--- a/slotine/contraction.ipynb
+++ b/slotine/contraction.ipynb
@@ -79,7 +79,7 @@
     "    2\\lambda_{max}\\delta\\mathbf{x}^T\\delta\\mathbf{x} $\n",
     "\n",
     "\n",
-    " - $\\|\\delta\\mathbf{x}_0\\|e^{\\int_0^t2\\lambda_{max}(\\mathbf{x},t)dt} \\le \\|\\delta\\mathbf{x}\\| \\le\n",
+    " - $\\|\\delta\\mathbf{x}_0\\|e^{\\int_0^t2\\lambda_{min}(\\mathbf{x},t)dt} \\le \\|\\delta\\mathbf{x}\\| \\le\n",
     "    \\|\\delta\\mathbf{x}_0\\|e^{\\int_0^t2\\lambda_{max}(\\mathbf{x},t)dt}$\n",
     "\n",
     "We will run the system using two trajectories, $x$ and $y$, defined by their initial conditions."
@@ -113,11 +113,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-1.5  0.5]\n",
+      " [ 0.5 -1.5]]\n"
+     ]
+    },
     {
      "data": {
       "image/png": [
@@ -369,7 +377,7 @@
        "ebxAds4555xzLo8XyM4555xzzuXxAtk555xzzrk8/x8Gls5LduQxDgAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f6afd5d13d0>"
+       "<matplotlib.figure.Figure at 0x7f6afe003490>"
       ]
      },
      "metadata": {},
@@ -1101,7 +1109,7 @@
        "Dk0og6S2LtTDAAAAAElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f6afd7c8c50>"
+       "<matplotlib.figure.Figure at 0x7f6afe278ed0>"
       ]
      },
      "metadata": {},
@@ -1141,7 +1149,8 @@
     "ax.plot(x[:,0], x[:,1], 'b', label=r'$x$ trajectory')\n",
     "ax.plot(y[:,0], y[:,1], 'r', label=r'$y$ trajectory')\n",
     "ax.legend(loc='upper left', bbox_to_anchor=(1,1), fontsize=14)\n",
-    "ax.set_title('phase plot and trajectory');"
+    "ax.set_title('phase plot and trajectory')\n",
+    "print A"
    ]
   },
   {
@@ -2001,7 +2010,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.3"
   }
  },
  "nbformat": 4,
