similar matrices share eigenvalues

--- a/theory/linear_algebra.ipynb
+++ b/theory/linear_algebra.ipynb
@@ -55,6 +55,35 @@
     "\n",
     "Showing that only symmetric portion of $A$ affects the quadratic form."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Similar matrices share eigenvalues\n",
+    "\n",
+    "Matrices $A$ and $B$ are similar if there exists some matrix $S$ such that \n",
+    "\n",
+    "$$B=S^{-1}AS$$\n",
+    "\n",
+    "or equivalently\n",
+    "\n",
+    "$$A=SBS^{-1}$$\n",
+    "\n",
+    "Now, consider eigenvalue $\\lambda$ and eigenvector $x$ of $A$. \n",
+    "\n",
+    "\\begin{align}\n",
+    "Ax &= \\lambda x \\\\\n",
+    "(A-\\lambda I)x &= 0 \\\\\n",
+    "(SBS^{-1} - \\lambda I)x &= \\\\\n",
+    "S(BS^{-1} - \\lambda S^{-1})x &= \\\\\n",
+    "S(B - \\lambda I)S^{-1}x &= \\\\\n",
+    "(B - \\lambda I)S^{-1}x &= S^{-1}0 \\\\\n",
+    "(B - \\lambda I)S^{-1}x &= 0 \\\\\n",
+    "\\end{align}\n",
+    "\n",
+    "This shows that $\\lambda$ is also an eigenvalue of $B$ and its corresponding eigenvector will be $S^{-1}x$."
+   ]
   }
  ],
  "metadata": {
@@ -73,7 +102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.3"
   }
  },
  "nbformat": 4,
