ralif verify simulator dfdt

--- a/slotine/contraction.ipynb
+++ b/slotine/contraction.ipynb
@@ -2039,7 +2039,7 @@
     "\n",
     "However, $\\mathbf{F}$ and $\\frac{\\partial\\mathbf{f}}{\\partial\\mathbf{x}}$ are now _similar matrices_, and similar matrices share the same eigenvalues (proof [here](http://nbviewer.ipython.org/github/fragapanagos/notebooks/blob/master/theory/linear_algebra.ipynb#Similar-matrices-share-eigenvalues)). Therefore we cannot make the eigenvalues of $\\mathbf{F}$ all negative using constant $\\mathbf{\\Theta}$. \n",
     "\n",
-    "Must we use a time varying $\\mathbf{\\Theta}$? ..."
+    "Must we use a time varying $\\mathbf{\\Theta}$? ...[TODO]"
    ]
   }
  ],
