--- a/synapse/synapse_SNR_poisson.ipynb
+++ b/synapse/synapse_SNR_poisson.ipynb
@@ -30,16 +30,16 @@
     "\n",
     "$$x=\\sum_{i=1}^{\\infty} \\frac{1}{\\tau}e^{-t_i/\\tau}.$$\n",
     "\n",
-    "To deal with the $\\infty$, we will first consider another random variable $Y$ that only looks back $k\\tau$ back in time such that \n",
+    "To deal with the $\\infty$, we will first consider another random variable $Y$ that only looks back $T$ back in time such that \n",
     "\n",
     "$$y=\\sum_{i=1}^{N} \\frac{1}{\\tau}e^{-t_i/\\tau}.$$\n",
     "\n",
-    "where $N$ is a random variable representing the number of spikes received within $k\\tau$ of the present time.\n",
+    "where $N$ is a random variable representing the number of spikes received within $T$ of the present time.\n",
     "\n",
     "From here \n",
     "\n",
     "$$\n",
-    "x = \\lim_{k\\rightarrow\\infty}y\n",
+    "x = \\lim_{T\\rightarrow\\infty}y\n",
     "$$"
    ]
   },
@@ -90,28 +90,27 @@
     " &= E[N]E\\left[\\frac{1}{\\tau}e^{-t_i/\\tau}\\right] \\\\\n",
     "\\end{aligned}\n",
     "\n",
-    "Since the impulse response is a decaying exponential, it never reaches 0. To avoid having to then consider all spikes since the beginning of time,  we make the simplifying assumption that the impulse response is negligible after a certain time. That is, we only consider spikes within $k\\tau$ of the current time, where $k$ is an arbitrary, positive value. The higher $k$ is, the further back in time we consider. As $N$ is the number of spikes from a Poisson spike train with rate $\\lambda$ received within $k\\tau$, $E[N]=\\lambda k\\tau$. In addition, spike times within a time period are uniform for a Poisson spike train, so $t_i$ is uniform and\n",
+    "Since the impulse response is a decaying exponential, it never reaches 0. To avoid having to then consider all spikes since the beginning of time,  we make the simplifying assumption that the impulse response is negligible after a certain time. That is, we only consider spikes within $T$ of the current time. The higher $T$ is, the further back in time we consider. As $N$ is the number of spikes from a Poisson spike train with rate $\\lambda$ received within $T$, $E[N]=\\lambda T$. In addition, spike times within a time period are uniform for a Poisson spike train, so $t_i$ is uniform and\n",
     "\n",
     "\\begin{aligned}\n",
-    "E\\left[\\frac{1}{\\tau}e^{-t_i/\\tau}\\right] &= \\int_0^{k\\tau}\\frac{1}{k\\tau}\\frac{1}{\\tau}e^{-t_i/\\tau}dt_i \\\\\n",
-    " &= \\frac{1}{k\\tau}\\int_0^{k\\tau}\\frac{1}{\\tau}e^{-t_i/\\tau}dt_i \\\\\n",
-    " &= \\frac{1}{k\\tau}\\left(1-e^{-k\\tau/\\tau}\\right) \\\\\n",
-    " &=  \\frac{1}{k\\tau}\\left(1-e^{-k}\\right)\n",
+    "E\\left[\\frac{1}{\\tau}e^{-t_i/\\tau}\\right] &= \\int_0^{T}\\frac{1}{T}\\frac{1}{\\tau}e^{-t_i/\\tau}dt_i \\\\\n",
+    " &= \\frac{1}{T}\\int_0^{T}\\frac{1}{\\tau}e^{-t_i/\\tau}dt_i \\\\\n",
+    " &= \\frac{1}{T}\\left(1-e^{-T/\\tau}\\right) \\\\\n",
     "\\end{aligned}\n",
     "\n",
     "Therefore \n",
     "\n",
     "\\begin{aligned}\n",
     "E[Y] &= E[N] E\\left[\\frac{1}{\\tau}e^{-t_i/\\tau}\\right] \\\\\n",
-    " &= \\lambda k\\tau \\frac{1}{k\\tau}\\left(1-e^{-k}\\right) \\\\\n",
-    " &= \\lambda \\left(1-e^{-k}\\right)\n",
+    " &= \\lambda T \\frac{1}{T}\\left(1-e^{-T/\\tau}\\right) \\\\\n",
+    " &= \\lambda \\left(1-e^{-T/\\tau}\\right)\n",
     "\\end{aligned}\n",
     "\n",
-    "Taking the limit as $k$ tends to infinity yields\n",
+    "Taking the limit as $T$ tends to infinity yields\n",
     "\n",
     "\\begin{aligned}\n",
-    "E[X] &= \\lim_{k\\rightarrow\\infty}E[Y] \\\\\n",
-    " &= \\lim_{k\\rightarrow\\infty}\\lambda \\left(1-e^{-k}\\right) \\\\\n",
+    "E[X] &= \\lim_{T\\rightarrow\\infty}E[Y] \\\\\n",
+    " &= \\lim_{T\\rightarrow\\infty}\\lambda \\left(1-e^{-T/\\tau}\\right) \\\\\n",
     "E[X] &=\\lambda\n",
     "\\end{aligned}\n",
     "\n",
@@ -138,14 +137,14 @@
     "\\begin{aligned}\n",
     "E[Y^2] &= E\\left[\\left(\\sum_{i=1}^{N}\\frac{1}{\\tau}e^{-t_i/\\tau}\\right)^2\\right] \\\\\n",
     " &= E\\left[\\left(\\sum_{i=1}^{N}\\frac{1}{\\tau}e^{-t_i/\\tau}\\right)\\left(\\sum_{j=1}^{N}\\frac{1}{\\tau}e^{-t_j/\\tau}\\right)\\right] \\\\\n",
-    " &= E\\left[\\frac{1}{\\tau^2}\\left(e^{-t_0/\\tau}+e^{-t_1/\\tau}+\\ldots+e^{-t_N/\\tau}\\right)\n",
-    "  \\left(e^{-t_0/\\tau}+e^{-t_1/\\tau}+\\ldots+e^{-t_N/\\tau}\\right)\\right] \\\\\n",
-    " &= E\\left[\\frac{1}{\\tau^2}\\left(\\overbrace{\\sum_{i=0}^{N-1}e^{-2t_i/\\tau}}^{\\text{squared terms}} + \n",
-    "  \\overbrace{\\sum_{i=0,i\\neq j}^{N-1}\\sum_{j=0}^{N-1}e^{-t_i/\\tau}e^{-t_j/\\tau}}^{\\text{cross terms}}\\right)\\right] \\\\\n",
-    " &= E\\left[\\frac{1}{\\tau}\\sum_{i=0}^{N-1}\\frac{1}{\\tau}e^{-2t_i/\\tau}+\n",
-    "  \\sum_{i=0,i\\neq j}^{N-1}\\sum_{j=0}^{N-1}\\frac{1}{\\tau}e^{-t_i/\\tau}\\frac{1}{\\tau}e^{-t_j/\\tau}\\right] \\\\\n",
-    " &= E\\left[\\frac{1}{\\tau}\\sum_{i=0}^{N-1}\\frac{1}{\\tau}e^{-2t_i/\\tau}\\right]+\n",
-    "  E\\left[\\sum_{i=0,i\\neq j}^{N-1}\\sum_{j=0}^{N-1}\\frac{1}{\\tau}e^{-t_i/\\tau}\\frac{1}{\\tau}e^{-t_j/\\tau}\\right] \\\\\n",
+    " &= E\\left[\\frac{1}{\\tau^2}\\left(e^{-t_1/\\tau}+e^{-t_2/\\tau}+\\ldots+e^{-t_N/\\tau}\\right)\n",
+    "  \\left(e^{-t_1/\\tau}+e^{-t_2/\\tau}+\\ldots+e^{-t_N/\\tau}\\right)\\right] \\\\\n",
+    " &= E\\left[\\frac{1}{\\tau^2}\\left(\\overbrace{\\sum_{i=1}^{N}e^{-2t_i/\\tau}}^{\\text{squared terms}} + \n",
+    "  \\overbrace{\\sum_{i=1,i\\neq j}^{N}\\sum_{j=1}^{N}e^{-t_i/\\tau}e^{-t_j/\\tau}}^{\\text{cross terms}}\\right)\\right] \\\\\n",
+    " &= E\\left[\\frac{1}{\\tau}\\sum_{i=1}^{N}\\frac{1}{\\tau}e^{-2t_i/\\tau}+\n",
+    "  \\sum_{i=1,i\\neq j}^{N}\\sum_{j=1}^{N}\\frac{1}{\\tau}e^{-t_i/\\tau}\\frac{1}{\\tau}e^{-t_j/\\tau}\\right] \\\\\n",
+    " &= E\\left[\\frac{1}{\\tau}\\sum_{i=0}^{N}\\frac{1}{\\tau}e^{-2t_i/\\tau}\\right]+\n",
+    "  E\\left[\\sum_{i=1,i\\neq j}^{N}\\sum_{j=1}^{N}\\frac{1}{\\tau}e^{-t_i/\\tau}\\frac{1}{\\tau}e^{-t_j/\\tau}\\right] \\\\\n",
     "\\end{aligned}"
    ]
   },
@@ -156,14 +155,13 @@
     "First, let's consider the squared terms. This is very similar to the derivation for $E[Y]$\n",
     "\n",
     "\\begin{aligned}\n",
-    "E\\left[\\frac{1}{\\tau}\\sum_{i=0}^{N-1}\\frac{1}{\\tau}e^{-2t_i/\\tau}\\right] &= \n",
-    " \\frac{1}{\\tau}E\\left[\\sum_{i=0}^{N-1}\\frac{1}{\\tau}e^{-2t_i/\\tau}\\right] \\\\\n",
-    " &= \\frac{1}{\\tau}E\\left[E\\left[\\sum_{i=0}^{N-1}\\frac{1}{\\tau}e^{-2t_i/\\tau}\\bigg|N\\right]\\right] \\\\\n",
+    "E\\left[\\frac{1}{\\tau}\\sum_{i=1}^{N}\\frac{1}{\\tau}e^{-2t_i/\\tau}\\right] &= \n",
+    " \\frac{1}{\\tau}E\\left[\\sum_{i=1}^{N}\\frac{1}{\\tau}e^{-2t_i/\\tau}\\right] \\\\\n",
+    " &= \\frac{1}{\\tau}E\\left[E\\left[\\sum_{i=1}^{N}\\frac{1}{\\tau}e^{-2t_i/\\tau}\\bigg|N\\right]\\right] \\\\\n",
     " &= \\frac{1}{\\tau}E[N]E\\left[\\frac{1}{\\tau}e^{-2t_i/\\tau}\\right] \\\\\n",
-    " &= \\frac{1}{\\tau}(\\lambda k\\tau)\\int_0^{k\\tau}\\frac{1}{k\\tau}\\frac{1}{\\tau}e^{-2t_i/\\tau}dt_i \\\\\n",
-    " &= \\frac{\\lambda}{\\tau}\\int_0^{k\\tau}\\frac{1}{\\tau}e^{-2t_i/\\tau}dt_i \\\\\n",
-    " &= \\frac{\\lambda}{2\\tau}\\left(1-e^{-2k\\tau/\\tau}\\right) \\\\\n",
-    " &= \\frac{\\lambda}{2\\tau}\\left(1-e^{-2k}\\right) \\\\\n",
+    " &= \\frac{1}{\\tau}(\\lambda T)\\int_0^{T}\\frac{1}{T}\\frac{1}{\\tau}e^{-2t_i/\\tau}dt_i \\\\\n",
+    " &= \\frac{\\lambda}{\\tau}\\int_0^{T}\\frac{1}{\\tau}e^{-2t_i/\\tau}dt_i \\\\\n",
+    " &= \\frac{\\lambda}{2\\tau}\\left(1-e^{-2T/\\tau}\\right) \\\\\n",
     "\\end{aligned}"
    ]
   },
@@ -174,34 +172,34 @@
     "Now let's consider the consider the cross terms.\n",
     "\n",
     "\\begin{aligned}\n",
-    "E\\left[\\sum_{i=0,i\\neq j}^{N-1}\\sum_{j=0}^{N-1}\\frac{1}{\\tau}e^{-t_i/\\tau}\\frac{1}{\\tau}e^{-t_j/\\tau}\\right] &=\n",
-    "   E\\left[E\\left[\\sum_{i=0,i\\neq j}^{N-1}\\sum_{j=0}^{N-1}\\frac{1}{\\tau}e^{-t_i/\\tau}\\frac{1}{\\tau}e^{-t_j/\\tau}\\bigg|N\\right]\\right] \\\\\n",
-    "  &= E\\left[\\sum_{i=0,i\\neq j}^{N-1}\\sum_{j=0}^{N-1}E\\left[\\frac{1}{\\tau}e^{-t_i/\\tau}\\frac{1}{\\tau}e^{-t_j/\\tau}\\bigg|N\\right]\\right] \\\\\n",
-    "  &= E\\left[\\sum_{i=0,i\\neq j}^{N-1}\\sum_{j=0}^{N-1}E\\left[\\frac{1}{\\tau}e^{-t_i/\\tau}\\frac{1}{\\tau}e^{-t_j/\\tau}\\right]\\right] \\\\\n",
-    "  &= E\\left[\\sum_{i=0,i\\neq j}^{N-1}\\sum_{j=0}^{N-1}1\\right]E\\left[\\frac{1}{\\tau}e^{-t_i/\\tau}\\frac{1}{\\tau}e^{-t_j/\\tau}\\right] \\\\\n",
+    "E\\left[\\sum_{i=1,i\\neq j}^{N}\\sum_{j=1}^{N}\\frac{1}{\\tau}e^{-t_i/\\tau}\\frac{1}{\\tau}e^{-t_j/\\tau}\\right] &=\n",
+    "   E\\left[E\\left[\\sum_{i=1,i\\neq j}^{N}\\sum_{j=1}^{N}\\frac{1}{\\tau}e^{-t_i/\\tau}\\frac{1}{\\tau}e^{-t_j/\\tau}\\bigg|N\\right]\\right] \\\\\n",
+    "  &= E\\left[\\sum_{i=1,i\\neq j}^{N}\\sum_{j=1}^{N}E\\left[\\frac{1}{\\tau}e^{-t_i/\\tau}\\frac{1}{\\tau}e^{-t_j/\\tau}\\bigg|N\\right]\\right] \\\\\n",
+    "  &= E\\left[\\sum_{i=1,i\\neq j}^{N}\\sum_{j=1}^{N}E\\left[\\frac{1}{\\tau}e^{-t_i/\\tau}\\frac{1}{\\tau}e^{-t_j/\\tau}\\right]\\right] \\\\\n",
+    "  &= E\\left[\\sum_{i=1,i\\neq j}^{N}\\sum_{j=1}^{N}1\\right]E\\left[\\frac{1}{\\tau}e^{-t_i/\\tau}\\frac{1}{\\tau}e^{-t_j/\\tau}\\right] \\\\\n",
     "  &= E\\left[N^2-N\\right]E\\left[\\frac{1}{\\tau}e^{-t_i/\\tau}\\frac{1}{\\tau}e^{-t_j/\\tau}\\right] \\\\\n",
     "  &= \\left(E\\left[N^2\\right]-E[N]\\right)E\\left[\\frac{1}{\\tau}e^{-t_i/\\tau}\\right]E\\left[\\frac{1}{\\tau}e^{-t_j/\\tau}\\right]\n",
     "   \\quad i\\neq j \\ \\text{ so } t_i, t_j \\text{ are independent} \\\\\n",
-    "  &= \\left(E\\left[N^2\\right]-E[N]\\right)\\frac{1}{k\\tau}\\left(1-e^{-k}\\right)\\frac{1}{k\\tau}\\left(1-e^{-k}\\right) \\\\\n",
-    "  &= \\left(E\\left[N^2\\right]-E[N]\\right)\\frac{1}{k^2\\tau^2}\\left(1-e^{-k}\\right)^2 \\\\\n",
+    "  &= \\left(E\\left[N^2\\right]-E[N]\\right)\\frac{1}{T}\\left(1-e^{-T/\\tau}\\right)\\frac{1}{T}\\left(1-e^{-T/\\tau}\\right) \\\\\n",
+    "  &= \\left(E\\left[N^2\\right]-E[N]\\right)\\frac{1}{T^2}\\left(1-e^{-T/\\tau}\\right)^2 \\\\\n",
     "\\end{aligned}\n",
     "\n",
-    "For poisson random variable $N$ with parameter $\\lambda k\\tau$, $\\operatorname{Var}(N)=E[N]=\\lambda k\\tau$\n",
+    "For Poisson random variable $N$ with parameter $\\lambda T$, $\\operatorname{Var}(N)=E[N]=\\lambda T$\n",
     "\n",
     "\\begin{aligned}\n",
-    "\\lambda k\\tau &= E\\left[N^2\\right]-E[N]^2 \\\\\n",
-    " &= E\\left[N^2\\right] - (\\lambda k\\tau)^2 \\\\\n",
-    "E\\left[N^2\\right] &= \\lambda k\\tau + (\\lambda k\\tau)^2 \n",
+    "\\lambda T &= E\\left[N^2\\right]-E[N]^2 \\\\\n",
+    " &= E\\left[N^2\\right] - (\\lambda T)^2 \\\\\n",
+    "E\\left[N^2\\right] &= \\lambda T + (\\lambda T)^2 \n",
     "\\end{aligned}\n",
     "\n",
     "Returning to the Expected cross term derivation\n",
     "\n",
     "\\begin{aligned}\n",
-    "E\\left[\\sum_{i=0,i\\neq j}^{N-1}\\sum_{j=0}^{N-1}\\frac{1}{\\tau}e^{-t_i/\\tau}\\frac{1}{\\tau}e^{-t_j/\\tau}\\right] &=\n",
-    "    \\left(E\\left[N^2\\right]-E[N]\\right)\\frac{1}{k^2\\tau^2}\\left(1-e^{-k}\\right)^2 \\\\\n",
-    " &= \\left(\\lambda k\\tau + (\\lambda k\\tau)^2 - \\lambda k\\tau\\right)\\frac{1}{k^2\\tau^2}\\left(1-e^{-k}\\right)^2 \\\\\n",
-    " &= \\left(\\lambda k\\tau\\right)^2\\frac{1}{k^2\\tau^2}\\left(1-e^{-k}\\right)^2 \\\\\n",
-    " &= \\lambda^2\\left(1-e^{-k}\\right)^2 \\\\\n",
+    "E\\left[\\sum_{i=1,i\\neq j}^{N}\\sum_{j=1}^{N}\\frac{1}{\\tau}e^{-t_i/\\tau}\\frac{1}{\\tau}e^{-t_j/\\tau}\\right] &=\n",
+    "    \\left(E\\left[N^2\\right]-E[N]\\right)\\frac{1}{T^2}\\left(1-e^{-T/\\tau}\\right)^2 \\\\\n",
+    " &= \\left(\\lambda T + (\\lambda T)^2 - \\lambda T\\right)\\frac{1}{T^2}\\left(1-e^{-T/\\tau}\\right)^2 \\\\\n",
+    " &= \\left(\\lambda T\\right)^2\\frac{1}{T^2}\\left(1-e^{-T/\\tau}\\right)^2 \\\\\n",
+    " &= \\lambda^2\\left(1-e^{-T/\\tau}\\right)^2 \\\\\n",
     "\\end{aligned}"
    ]
   },
@@ -214,14 +212,15 @@
     "\\begin{aligned}\n",
     "E\\left[Y^2\\right] &= E\\left[\\frac{1}{\\tau}\\sum_{i=0}^{N-1}\\frac{1}{\\tau}e^{-2t_i/\\tau}\\right] +\n",
     "    E\\left[\\sum_{i=0,i\\neq j}^{N-1}\\sum_{j=0}^{N-1}\\frac{1}{\\tau}e^{-t_i/\\tau}\\frac{1}{\\tau}e^{-t_j/\\tau}\\right] \\\\\n",
-    " &= \\frac{\\lambda}{2\\tau}\\left(1-e^{-2k}\\right) + \\lambda^2\\left(1-e^{-k}\\right)^2,\n",
+    " &= \\frac{\\lambda}{2\\tau}\\left(1-e^{-2T/\\tau}\\right) + \\lambda^2\\left(1-e^{-T/\\tau}\\right)^2\n",
     "\\end{aligned}\n",
     "\n",
     "and relating to $E[X^2]$,\n",
     "\n",
     "\\begin{aligned}\n",
-    "E[X^2] &= \\lim_{k\\rightarrow\\infty}E[Y^2] \\\\\n",
-    " &= \\lim_{k\\rightarrow\\infty} \\frac{\\lambda}{2\\tau}\\left(1-e^{-2k}\\right) + \\lambda^2\\left(1-e^{-k}\\right)^2 \\\\\n",
+    "E[X^2] &= \\lim_{T\\rightarrow\\infty}E[Y^2] \\\\\n",
+    " &= \\lim_{T\\rightarrow\\infty} \\frac{\\lambda}{2\\tau}\\left(1-e^{-2T/\\tau}\\right)+\n",
+    "     \\lambda^2\\left(1-e^{-T/\\tau}\\right)^2 \\\\\n",
     "E[X^2] &= \\frac{\\lambda}{2\\tau} + \\lambda^2\n",
     "\\end{aligned}"
    ]
@@ -3598,7 +3597,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.3"
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
