add section on campbell's theorem in poisson notebook

--- a/synapse/synapse_SNR_poisson.ipynb
+++ b/synapse/synapse_SNR_poisson.ipynb
@@ -11,6 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<!---define operatorname var-->\n",
+    "$\\DeclareMathOperator{\\Var}{Var}$\n",
+    "<!---define operatorname var-->\n",
     "This notebook looks at the signal to noise ratio (SNR) of a synapse with Poisson input spike train with frequency $\\lambda$. [Here](http://nbviewer.ipython.org/github/fragapanagos/notebooks/blob/master/synapse/synapse_SNR_uniform.ipynb) is a notebook considering a synapse with uniform input spikes and [here](http://nbviewer.ipython.org/github/fragapanagos/notebooks/blob/master/synapse/synapse_SNR_uniform.ipynb) is a notebook considering a synapse with $p$-thinned uniform input spikes\n",
     "\n",
     "$$SNR = \\frac{E[X]}{\\sqrt{\\operatorname{Var}(X)}}$$\n",
@@ -130,7 +133,7 @@
    "source": [
     "By definition, \n",
     "\n",
-    "$$\\operatorname{Var}(X) = E[X^2] - E[X]^2$$\n",
+    "$$\\Var(X) = E[X^2] - E[X]^2$$\n",
     "\n",
     "We've determined $E[X]$ already, so let's find $E[X^2]$.\n",
     "\n",
@@ -3578,6 +3581,86 @@
     "lams = np.linspace(5, 1000, 50)\n",
     "check_theory(lams, k=30, trials=10000)\n",
     "# savefig('/home/NEF/Dropbox/Research/presentations/noise_analysis/figures/poisson_snr.png', dpi=200)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Appendix\n",
+    "\n",
+    "## Campbell's theorem\n",
+    "\n",
+    "Campbell's theorem provides us with a method of finding the expectation of the random sum \n",
+    "\n",
+    "$$\n",
+    "\\Sigma = \\sum_{x\\in N}f(x)\n",
+    "$$\n",
+    "\n",
+    "where $N$ is a point process on $d$-dimensional Euclidian space $\\mathbb{R}^d$ and $f:\\mathbb{R}^d\\rightarrow\\mathbb{R}$ is a measurable function.\n",
+    "\n",
+    "The random sum is absolutely convergent with probability one iff \n",
+    "\n",
+    "$$\n",
+    "\\int_{\\mathbb{R}^d}\\min(|f(x)|,1)\\Lambda(dx)<\\infty\n",
+    "$$\n",
+    "\n",
+    "If the integral is finite, then for any complex value $\\theta$,\n",
+    "\n",
+    "$$\n",
+    "E[e^{\\theta\\Sigma}]=\\exp\\left(\\int_{\\mathbb{R}^d}[e^{\\theta f(x)}-1]\\Lambda(dx)\\right)\n",
+    "$$\n",
+    "\n",
+    "so\n",
+    "\n",
+    "$$\n",
+    "E(\\Sigma)=\\int_{\\mathbb{R}^d}f(x)\\Lambda(dx)\n",
+    "$$\n",
+    "\n",
+    "and\n",
+    "\n",
+    "$$\n",
+    "\\Var(\\Sigma)=\\int_{\\mathbb{R}^d}f(x)^2\\Lambda(dx)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here, \n",
+    " - $d=1$ because we are only looking at time\n",
+    " - $\\Lambda(dx)=\\lambda dx$ because the rate is assumed constant\n",
+    " - $f(x)=\\frac{1}{\\tau}e^{-x/\\tau}u(x)$\n",
+    "\n",
+    "\n",
+    "Therefore,\n",
+    "\n",
+    "\\begin{align*}\n",
+    "E(\\Sigma) &= \\int_0^{\\infty}\\lambda\\frac{1}{\\tau}e^{-t/\\tau}dt \\\\\n",
+    " &= \\lambda\n",
+    "\\end{align*}\n",
+    "\n",
+    "and\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\Var(\\Sigma) &= \\int_0^{\\infty}\\lambda\\left(\\frac{1}{\\tau}e^{-t/\\tau}\\right)^2dt \\\\\n",
+    " &= \\frac{\\lambda}{\\tau}\\int_0^{\\infty}\\frac{1}{\\tau}e^{-2t/\\tau}dt \\\\\n",
+    " &= \\frac{\\lambda}{2\\tau} \\\\ \n",
+    "\\end{align*}\n",
+    "\n",
+    "Therefore,\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Questions to answer\n",
+    "- What is a measureable function?\n",
+    "- What is an intensity measure?\n",
+    "- How did expressions for the expectation and"
    ]
   }
  ],
