filtered renewal process expected value

--- a/theory/campbell_theorem.ipynb
+++ b/theory/campbell_theorem.ipynb
@@ -116,6 +116,105 @@
     "\n",
     " - What is a mean measure?"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Filtered Renewal processes\n",
+    "\n",
+    "Renewal processes are generalizations of the Poisson point process. In the Poisson point process, each interval independent, and identically distributed according to the exponential distribution. In a renewal process, intervals are also idependent and identically distributed, but the distribution is not restricted to be exponential.\n",
+    "\n",
+    "Filter is given by \n",
+    "\n",
+    "$$\n",
+    "f(t) = \n",
+    "\\begin{cases}\n",
+    "\\frac{1}{\\tau}e^{-t/\\tau} & t\\ge0 \\\\\n",
+    "0 & t<0 \\\\\n",
+    "\\end{cases}\n",
+    "$$\n",
+    "\n",
+    "\\begin{align*}\n",
+    "X &= f(t_1) + f(t_1+t_2) + f(t_1+t_2+t_3) + \\ldots \\\\\n",
+    " &= \\frac{1}{\\tau}e^{-t_1/\\tau} + \\frac{1}{\\tau}e^{-(t_1+t_2)/\\tau} + \n",
+    "     \\frac{1}{\\tau}e^{-(t_1+t_2+t_3)/\\tau} + \\ldots \\\\\n",
+    " &= \\frac{1}{\\tau}\\left(e^{-t_1/\\tau}+e^{-t_1/\\tau}e^{-t_2/\\tau}+\n",
+    "     e^{-t_1/\\tau}e^{-t_2/\\tau}e^{-t_3/\\tau} + \\ldots\\right) \\\\\n",
+    " &= \\frac{1}{\\tau}\\sum_{i=1}^\\infty\\prod_{j=1}^ie^{-t_i/\\tau}\n",
+    "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We are interested in the expected value and variance of the filtered renewal process. \n",
+    "\n",
+    "\\begin{align*}\n",
+    "E[X] &= E\\left[\\frac{1}{\\tau}\\sum_{i=1}^\\infty\\prod_{j=1}^ie^{-t_i/\\tau}\\right] \\\\\n",
+    " &= \\frac{1}{\\tau}\\sum_{i=1}^\\infty E\\left[\\prod_{j=1}^ie^{-t_i/\\tau}\\right] & \\text{expectation is linear} \\\\\n",
+    " &= \\frac{1}{\\tau}\\sum_{i=1}^\\infty\\prod_{j=1}^iE\\left[e^{-t_i/\\tau}\\right] & \\text{intervals are iid} \\\\\n",
+    " &= \\frac{1}{\\tau}\\sum_{i=1}^\\infty E\\left[e^{-t_i/\\tau}\\right]^i \\\\\n",
+    "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{align*}\n",
+    "E[X^2] = \n",
+    "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Crosscheck filtered renewal equations with filtered Poisson process\n",
+    "\n",
+    "With the Poisson process $t_i$ are iid and $t_i\\sim Exp(\\lambda)$.\n",
+    "\n",
+    "We see $E\\left[e^{-t_i/\\tau}\\right]$ and $E\\left[e^{-2t_i/\\tau}\\right]$ in the expressions we've derived. Let's find a general expression for $E\\left[e^{-kt_i/\\tau}\\right]$\n",
+    "\n",
+    "\\begin{align*}\n",
+    "E\\left[e^{-kt/\\tau}\\right] &= \\int_{-\\infty}^{\\infty}e^{-kt/\\tau}f_{T}(t)dt \\\\\n",
+    " &= \\int_{0}^{\\infty}e^{-kt/\\tau}\\lambda e^{-\\lambda t}dt \\\\\n",
+    " &= \\lambda\\int_{0}^{\\infty}e^{-t(k/\\tau+\\lambda)}dt \\\\\n",
+    " &= \\frac{-\\lambda}{(k/\\tau+\\lambda)}\\left[e^{-t(k/\\tau+\\lambda)}\\right]_0^\\infty \\\\\n",
+    " &= \\frac{\\lambda}{(k/\\tau+\\lambda)} \\\\\n",
+    " &= \\frac{\\lambda\\tau}{k+\\lambda\\tau} \\\\\n",
+    "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plugging into the equation for expectation,\n",
+    "\n",
+    "\\begin{align*}\n",
+    "E[X] &= \\frac{1}{\\tau}\\sum_{i=1}^\\infty E\\left[e^{-t_i/\\tau}\\right]^i  \\\\\n",
+    " &= \\frac{1}{\\tau}\\sum_{i=1}^\\infty\\left(\\frac{\\lambda\\tau}{1+\\lambda\\tau}\\right)^i \\\\\n",
+    " &= \\frac{1}{\\tau}\\frac{\\frac{\\lambda\\tau}{1+\\lambda\\tau}}{1-\\frac{\\lambda\\tau}{1+\\lambda\\tau}} \\\\\n",
+    " &= \\frac{1}{\\tau}\\frac{\\lambda\\tau}{1+\\lambda\\tau-\\lambda\\tau} \\\\\n",
+    " &= \\lambda\n",
+    "\\end{align*}\n",
+    "\n",
+    "The sum converges because $\\lambda$ and $\\tau$ are both positive numbers, so $0\\le\\frac{\\lambda\\tau}{1+\\lambda\\tau}<1$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# open questions and directions\n",
+    "\n",
+    "We are also interested in the covariance of the filtered renewal process.\n",
+    "\n",
+    "More generally, are there expressions for the moment generating function or characteristic equation?"
+   ]
   }
  ],
  "metadata": {
@@ -134,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.9"
   }
  },
  "nbformat": 4,
